# DeepDarkFantasy

./: .coveralls.yml  .gitignore  .travis.yml  CONTRIBUTING.md  DeepDarkFantasy.cabal  FEATURES.md  LICENSE  NOTICE  OUTLINE.md  README.md  Talk.odp  Talk.pptx  build.sbt  stack.yaml
DDF/: Bimap.hs  Bool.hs  Char.hs  Combine.hs  DBI.hs  DLang.hs  Diff.hs  DiffWrapper.hs  Double.hs  Dual.hs  Eval.hs  Fix.hs  Float.hs  FreeVector.hs  GDiff.hs  GInfDiff.hs  GWDiff.hs  IO.hs  ImpW.hs  ImportMeta.hs  InfDiff.hs  Int.hs  Lang.hs  LiftDiff.hs  LiftInfDiff.hs  List.hs  Map.hs  Option.hs  Ordering.hs  PE.hs  Poly.lhs  Prod.hs  RTDiff.hs  RTInfDiff.hs  Show.hs  Size.hs  Sum.hs  Term.hs  TermGen.hs  UInt.hs  (+10 more)
DDF/Meta/: Combine.hs  Diff.hs  DiffWrapper.hs  Dual.hs  FreeVector.hs  GWDiff.hs  InfDiff.hs  Interpreter.hs  Util.hs  VectorTF.hs
DDF/Sam/: Hello.lhs  Poly.lhs  Xor.lhs
doc/: poly.md
lib/: DBI.hs  Lang.hs  Util.hs  Xor.lhs
project/: plugins.sbt
src/: Comb.hs  DBI.hs  DBIT.hs  HOAS.hs  Lang.hs  MK.hs  Main.hs  Poly.lhs  PolyT.hs  TestPoly.hs  Util.hs  Xor.lhs
src/main/scala-2.11/: DDF.scala
src/main/scala/com/thoughtworks/DDF/: ADEval.scala  ADEvalCase.scala  ADEvalMatch.scala  ArrLang.scala  BCKWLang.scala  BEval.scala  BLang.scala  CLang.scala  Combinators.scala  CommutativeMonoid.scala  CommutativeMonoidUnit.scala  DoubleLang.scala  Eq.scala  Eval.scala  EvalCase.scala  EvalLang.scala  EvalLanguage.scala  EvalO.scala  EvalOBase.scala  EvalOMatch.scala  FEval.scala  Gradient.scala  ILang.scala  ImpW.scala  ImpWLog.scala  IsoBase.scala  KLang.scala  Lang.scala  Language.scala  Loss.scala  LossCase.scala  MonoidUnit.scala  NaiveNextBase.scala  NaiveNextLang.scala  Next.scala  NextBase.scala  NextLang.scala  NoInfo.scala  PairLang.scala  Preclude.scala  (+18 more)
src/main/scala/com/thoughtworks/DDF/Arr/: ArrEC.scala  ArrEval.scala  ArrLC.scala  ArrLCRet.scala  ArrLang.scala  ArrLoss.scala  EvalArr.scala  ShowArr.scala  SimpleArr.scala  forward.scala
src/main/scala/com/thoughtworks/DDF/Arrow/: ADEvalArr.scala  Arr.scala  ArrInfo.scala  ArrMin.scala  ArrType.scala  Arrow.scala  ArrowInfo.scala  ArrowMin.scala  ArrowRepr.scala  BEvalArr.scala  BEvalArrInfo.scala  BEvalArrow.scala  BEvalArrowInfo.scala  EvalArrow.scala  EvalMArr.scala  EvalOArr.scala  FEvalArr.scala  ILIGArrInfo.scala  ImpWArrowMin.scala  IsoArr.scala  LangTermArr.scala  NextArrow.scala  ShowArr.scala  ShowArrow.scala  SimpleArr.scala  SimpleArrow.scala
src/main/scala/com/thoughtworks/DDF/Bool/: ADEvalBool.scala  BEvalBool.scala  Bool.scala  BoolInfo.scala  BoolRepr.scala  BoolType.scala  EvalBool.scala  EvalMBool.scala  FEvalBool.scala  ILIGBoolInfo.scala  ITE.scala  ImpWBool.scala  IsoBool.scala  LangTermBool.scala  LitB.scala  NextBool.scala  ShowBool.scala  SimpleBool.scala
src/main/scala/com/thoughtworks/DDF/Bot/: ADEvalBotMin.scala  BEvalBot.scala  BEvalBotMin.scala  Bot.scala  BotInfo.scala  BotMin.scala  BotType.scala  EvalMBotMin.scala  FEvalBotMin.scala  ILIGBotInfo.scala  Imfalso.scala  Impossible.scala  IsoBot.scala  LangTermBot.scala  ShowBot.scala  ShowBotMin.scala  SimpleBot.scala
src/main/scala/com/thoughtworks/DDF/CombUnit/: CombTop.scala  CombTopExt.scala  CombUnit.scala  CombUnitExt.scala  CombUnitL.scala  NaiveNextCombUnit.scala  NaiveNextCombUnitL.scala
src/main/scala/com/thoughtworks/DDF/Combinators/: ADEvalComb.scala  App.scala  B.scala  BCKW.scala  BCKWLang.scala  BCKWRepr.scala  BEvalComb.scala  BLang.scala  BRepr.scala  BaseRepr.scala  C.scala  CLang.scala  CRepr.scala  Comb.scala  CombEval.scala  CombExt.scala  Combinators.scala  EvalComb.scala  EvalMComb.scala  EvalOComb.scala  FEvalComb.scala  I.scala  ILang.scala  IRepr.scala  ImpWComb.scala  IsoComb.scala  K.scala  KLang.scala  KRepr.scala  LangTermComb.scala  Let.scala  NaiveNextComb.scala  NaiveNextSKI.scala  NextComb.scala  S.scala  SKI.scala  SKILang.scala  SKIRepr.scala  SLang.scala  SRepr.scala  (+8 more)
src/main/scala/com/thoughtworks/DDF/Cont/: Cont.scala  ContBase.scala  ContBind.scala  ContInfo.scala  ContRet.scala  ContType.scala  IsoCont.scala  LangTermCont.scala
src/main/scala/com/thoughtworks/DDF/Diff/: Diff.scala
src/main/scala/com/thoughtworks/DDF/Double/: ADEvalDoubleMin.scala  BEvalDivD.scala  BEvalDouble.scala  BEvalDoubleInfo.scala  BEvalExpD.scala  BEvalLitD.scala  BEvalLtD.scala  BEvalMultD.scala  BEvalPlusD.scala  BEvalSigD.scala  DEC.scala  DEval.scala  DLC.scala  DLang.scala  DLoss.scala  DivD.scala  Double.scala  DoubleInfo.scala  DoubleLang.scala  DoubleMin.scala  DoubleRepr.scala  DoubleType.scala  EvalD.scala  EvalDouble.scala  EvalMDouble.scala  EvalMDoubleMin.scala  ExpD.scala  FEvalDouble.scala  FEvalDoubleMin.scala  ILIGDoubleInfo.scala  ImpWDouble.scala  IsoDouble.scala  LangTermDouble.scala  LitD.scala  LtD.scala  MinusD.scala  MultD.scala  NegD.scala  NextDouble.scala  PlusD.scala  (+7 more)
src/main/scala/com/thoughtworks/DDF/Example/: HelloWorld.scala  Solve.scala
src/main/scala/com/thoughtworks/DDF/Except/: Except.scala  ExceptBase.scala  ExceptBind.scala  ExceptRet.scala  IsoExcept.scala  LangTermExcept.scala
src/main/scala/com/thoughtworks/DDF/Forall/: EvalForall.scala  ForallRepr.scala  NextForall.scala  ShowForall.scala  SimpleForall.scala
src/main/scala/com/thoughtworks/DDF/Gradient/: GArrDouble.scala  GArrPair.scala  GDouble.scala  GDoubleArr.scala  GPair.scala  GPairArr.scala  GParIso.scala  GProd.scala  GProdArr.scala  GUnit.scala  package.scala
src/main/scala/com/thoughtworks/DDF/Hoas/: Hoas.scala
src/main/scala/com/thoughtworks/DDF/IO/: ADEvalIO.scala  EvalMIO.scala  FEvalIO.scala  GetDouble.scala  GetDoubleMin.scala  ILIGIOInfo.scala  IO.scala  IOBase.scala  IOBind.scala  IOInfo.scala  IORet.scala  IOType.scala  IsoIO.scala  LangTermIO.scala  PutDouble.scala  PutDoubleMin.scala  ShowIO.scala  SimpleIO.scala
src/main/scala/com/thoughtworks/DDF/InfoB/: EvalInfoB.scala  InfoB.scala  NaiveNextInfoB.scala  SimpleInfoB.scala
src/main/scala/com/thoughtworks/DDF/InfoBase/: ADEvalInfoBase.scala  BEvalInfoBase.scala  (+10 more)
src/main/tut/: poly.md  test.md
test/: TestPE.hs  TestPoly.hs  TestXor.hs
(+268 files in other folders)
