name: DeepDarkFantasy
version: 0.2017.4.19
cabal-version: 1.12
build-type: Simple
license: Apache
tested-with: GHC == 8.0.2
maintainer: lolisa@marisa.moe
category: DSL
description: Deep Dark Fantasy(DDF) is a domain specific language that allow one to automatically derive derivative of program in DDF. Hence, one can write neural network in DDF and use the derivative program for gradient descend. 
synopsis: A DSL for creating neural network.
license-file: LICENSE

source-repository head
  type: git
  location: https://github.com/ThoughtWorksInc/DeepDarkFantasy

library
  exposed-modules:
    DDF.Bimap
    DDF.Bool
    DDF.Char
    DDF.Combine
    DDF.DBI
    DDF.Diff
    DDF.DLang
    DDF.Double
    DDF.Dual
    DDF.Eval
    DDF.Float
    DDF.GDiff
    DDF.GInfDiff
    DDF.ImportMeta
    DDF.ImpW
    DDF.InfDiff
    DDF.Lang
    DDF.Map
    DDF.Meta.Interpreter
    DDF.Meta.Diff
    DDF.Meta.Dual
    DDF.Option
    DDF.Poly
    DDF.Prod
    DDF.RTInfDiff
    DDF.Show
    DDF.Size
    DDF.UInt
    DDF.UnHOAS
    DDF.Unit
    DDF.UnLiftEnv
    DDF.Util
    DDF.Vector
    DDF.WithDiff
    DDF.Xor
  build-depends:
    base >= 4.9.0.0 && <= 4.9.1.0,
    mtl -any,
    random -any,
    constraints -any,
    containers -any,
    bimap -any
  ghc-options: -Wall -Wno-type-defaults -Wno-missing-signatures -Wno-orphans -fwarn-tabs -ferror-spans
  default-language: Haskell2010

Test-Suite TestPoly
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: TestPoly.hs
  build-depends:
    base >= 4.9.0.0 && <= 4.9.1.0,
    mtl -any,
    random -any,
    constraints -any,
    DeepDarkFantasy

Test-Suite TestXor
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: TestXor.hs
  build-depends:
    base >= 4.9.0.0 && <= 4.9.1.0,
    mtl -any,
    random -any,
    constraints -any,
    DeepDarkFantasy
